# mnextend

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/mnextend/: __init__.py
src/mnextend/iclabel/: __init__.py  iclabel.py
src/mnextend/io/: __init__.py  mat.py  npy.py  readers.py  utils.py  writers.py  xdf.py
tests/: test_iclabel.py  test_readers.py  test_writers.py
tools/: release.py
