[build-system]
requires = ["uv_build >= 0.11.24, < 0.12.0"]
build-backend = "uv_build"

[project]
name = "mnextend"
version = "0.3.0.dev0"
description = "Additional functionality for MNE-Python"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Clemens Brunner", email = "clemens.brunner@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["EEG", "MEG", "MNE-Python", "XDF", "electrophysiology"]
dependencies = [
    "edfio>=0.4.13",
    "matplotlib>=3.8",
    "mne>=1.12.1",
    "numpy>=2.2.6",
    "onnx>=1.21.0",
    "pybv>=0.8.1",
    "pybvrf>=0.1.3",
    "pyxdf>=1.17.5",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "pytest >= 9.1.1",
    "ruff >= 0.15.19",
]

[project.urls]
homepage = "https://github.com/cbrnr/mnextend"
documentation = "https://github.com/cbrnr/mnextend/blob/main/README.md"
repository = "https://github.com/cbrnr/mnextend"
changelog = "https://github.com/cbrnr/mnextend/blob/main/CHANGELOG.md"

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP", "W"]
